--- a/style.css
+++ b/style.css
@@ -106,14 +106,15 @@ input:focus{
 /*sidebar*/
 
 .sidebar{
-    color:#5f6368;
     position: fixed;
+    left: 0;
+    top: 64px;
+    color:#5f6368;
     display: flex;
     flex-direction: column;
     left: 0;
     width: 80px;
     overflow-x: hidden;
-
 }
 
 .active{
@@ -128,7 +129,7 @@ input:focus{
     align-items: center;
 }
 
-.sidebar-text{
+.sidebar-items .sidebar-text{
     color: #202124;
     margin-left: 20px;
     font-size: .875rem;
@@ -139,4 +140,31 @@ input:focus{
     margin-top: 5px;
 
 }
+
+.form-container{
+    max-width: 598px;
+    height: 46px;
+    margin: 40px auto;
+    border: #a1a2a2 1px solid;
+    border-radius: 8px;
+}
+
+form{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+    height: 100%;
+}
+
+.form-container .note-text{
+    border: none;
+    font-size: 1rem;
+    height: 100%;
+    margin-left: 10px;
+}
+
+.form-actions{
+    display: flex;
+}
+
 
