--- a/style.css
+++ b/style.css
@@ -255,14 +255,21 @@ form{
     color: #5f6360;
 }
 
-.model {
+.modal {
     position: fixed;
     top: 0;
     left: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgb(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
-}
-
+    visibility: hidden;
+  }
+  
+  .modal-content {
+    width: 589px;
+    position: relative;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
