--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ form{
     color: #dadce0;
 }
 
+.active-form {
+    display: none;
+}
+
 .small-icons{
     color: black;
     font-size: 1rem;
