--- a/style.css
+++ b/style.css
@@ -109,12 +109,19 @@ input:focus{
     position: fixed;
     left: 0;
     top: 64px;
+    padding-left: 9px;
     color:#5f6368;
     display: flex;
     flex-direction: column;
-    left: 0;
     width: 80px;
+    height: 100%;
     overflow-x: hidden;
+    transition: 0.8s;
+}
+
+.sidebar-hover{
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);   
+    background: white;
 }
 
 .active{
@@ -131,7 +138,7 @@ input:focus{
 
 .sidebar-items .sidebar-text{
     color: #202124;
-    margin-left: 20px;
+    margin-left: 37px;
     font-size: .875rem;
     font-weight: 500;
     /* width: 250px; */
